fix wrong position

--- a/style/style.css
+++ b/style/style.css
@@ -1846,10 +1846,12 @@ hr{
     flex-direction: column;
   }
   
+  .page-profile .photo-left {
+    margin-top: -120px;
+  }
   .page-profile .photo {
     width: 200px;
     height: 200px;
-    margin-top: -120px;
     border-radius: 100px;
     border: 4px solid #fff;
   }
